--- a/css/style.css
+++ b/css/style.css
@@ -65,3 +65,17 @@ font-weight: 500;
 line-height: 18px;
 color: #ffffff;
 }
+
+.principle-title {
+  font-size: 45px;
+  font-weight: 500;
+  line-height: 45px;
+  color: #000000;
+}
+
+.principle-explain {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  color: #283136;
+}
