--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,34 @@ a {
 .partners ul {
   list-style: none;
 }
+/*отсюда начинается разметка страницы каталога*/
+.page-title {
+  font-size: 55px;
+font-weight: 500;
+line-height: 55px;
+text-align: center;
+}
 
+.filter fieldset {
+  border: none;
+}
+
+.filter legend {
+  font-size: 18px;
+font-weight: 700;
+line-height: 30px;
+text-transform: uppercase;
+}
+
+.filter ul {
+  list-style: none;
+  font-size: 16px;
+font-weight: 400;
+  line-height: 20px;
+  color: #283136;
+}
+
+/*здесь завершается разметка страницы каталога*/
 .contact-name {
   font-size: 18px;
   font-weight: 700;
