--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,10 @@ a {
   color: #ffffff;
 }
 
+.button {
+
+}
+
 .principle-title {
   font-size: 45px;
   font-weight: 500;
@@ -161,14 +165,25 @@ a {
   list-style: none;
 }
 
-.catalog-item::before {
-  content: "";
-  display: block;
-  width: 360px;
-  height: 40px;
-  opacity: 0.12;
-  background-color: red;
+.catalog-item-topic a {
+color: #000000;
 }
+
+.description-catalog-item h3 {
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 30px;
+  text-transform: uppercase;
+}
+
+.description-catalog-item {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 18px;
+  color: #666666;
+
+}
+
 /*здесь завершается разметка страницы каталога*/
 .contact-name {
   font-size: 18px;
