--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,8 @@ body {
   font-family: "Roboto", Arial, sans-serif;
   color: #000000;
   background-color: #ffffff;
+  font-size: 16px;
+  line-height: 24px;
 }
 
 a {
