--- a/css/style.css
+++ b/css/style.css
@@ -20,9 +20,7 @@ a {
 .main-navigation {
   font-size: 16px;
   line-height: 30px;
-  color: #000000;
-  background-color: ##eeeeee;
-}
+  }
 
 .site-navigation,
 .order {
@@ -41,6 +39,11 @@ a {
   color: #fb565a;
 }
 
+.site-navigation a:active,
+.order a:active {
+  color: #a6a6a6;
+}
+
 /* .features-slide /*разметить блок со слайдами*/
 .service-list {
   list-style: none;
@@ -50,11 +53,11 @@ a {
   font-size: 24px;
   font-weight: 700;
   line-height: 30px;
+  text-transform: uppercase;
 }
 
 .service-item-slogan {
   font-size: 16px;
-  font-weight: 400;
   line-height: 24px;
   color: #283136;
 }
