--- a/css/style.css
+++ b/css/style.css
@@ -67,22 +67,16 @@ a {
   font-weight: 500;
   line-height: 18px;
   text-transform: uppercase;
-  color: #ffffff;
-}
-
-.order-button {
-
+  /* color: #ffffff; *//*раскомментировать цвет для надписей на кнопках*/
 }
 
 .principle-title {
   font-size: 45px;
   font-weight: 500;
   line-height: 45px;
-  color: #000000;
-}
+  }
 
 .principle-explain {
-  font-size: 16px;
   font-weight: 400;
   line-height: 24px;
   color: #283136;
