--- a/css/style.css
+++ b/css/style.css
@@ -182,20 +182,20 @@ a {
 }
 
 /*здесь завершается разметка страницы каталога*/
+.contacts {
+  line-height: 18px;
+  color: #666666;
+}
 .contact-name {
   font-size: 18px;
   font-weight: 700;
   line-height: 30px;
   text-transform: uppercase;
+  color: #000000;
   }
+/* непонятный момент с селекторами contact-name и contacts*/
 
-.contact-address,
-.contact-phone a {
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 18px;
-  color: #666666;
-}
+
 
 /*а могу ли я не создавать целое перавило ради изменеия
 одного свойства, а просто добавить его в предыдущее. Т.е. text-decoration будет
