изменил цвет по умолчанию ссыкле .contact-phone a

--- a/css/style.css
+++ b/css/style.css
@@ -193,6 +193,10 @@ a {
   text-transform: uppercase;
   color: #000000;
   }
+
+  .contact-phone a {
+    color: #666666;
+  }
 /* непонятный момент с селекторами contact-name и contacts*/
 
 
