--- a/css/style.css
+++ b/css/style.css
@@ -203,7 +203,7 @@ a {
 одного свойства, а просто добавить его в предыдущее. Т.е. text-decoration будет
 применятся к содержимому тега, к которому его применять нет нужды (с классом.contact-addres), но
 зато он срабоатет для тега со вторым классом */
-.connect-button {
+.button-connect {
   font-size: 16px;
   font-weight: 500;
   line-height: 18px;
