--- a/css/style.css
+++ b/css/style.css
@@ -3,27 +3,68 @@ body {
   padding: 0;
   font-family: "Roboto", Arial, sans-serif;
   color: #000000;
-  background-color: #ffffff;
+  /* background-color: #ffffff; */ /*вернуть фон после макросетки*/
   font-size: 16px;
   line-height: 24px;
+}
+
+
+ body > * {
+  background: rgba(255, 0, 0, 0.5);
+}
+
+body > * > * {
+  background: rgba(225, 235, 223, 0.3);
+}
+
+body > * > * > *{
+  background: rgba(44, 176, 21, 0.3);
 }
 
 a {
   text-decoration: none;
 }
 
-.main-header,
-.features {
-  background-color: #eeeeee;
+.main-header {
+  margin-bottom: 18px; /*не очень понимаю зачем он нужен, если следующий блок элементов не размечен*/
 }
 
+.main-header,
+.features {
+  /* background-color: #eeeeee; */
+}/*вернуть фон после завершения разметки макросетки*/
+
 .main-navigation {
+  display: flex;
   line-height: 30px;
 }
+
+.main-header-logo {
+/* display: block; /*не забыть удалить временное свойство*/ */
+  width: 165px;
+  height: 65px;
+  padding-top: 49px;
+  padding-left: 20px;
+  }
+
 
 .site-navigation,
 .order {
   list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.site-navigation {
+width: 440px;
+  margin-left: 202px;
+  margin-top: 75px;
+}
+
+.order {
+width: 116px;
+margin-left: 245px;
+margin-top: 75px;
 }
 
 .site-navigation a,
