--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,7 @@ padding: 0 20px;
   display: flex;
   width: 1160px;
   justify-content: space-between;
-  margin-bottom: 70px;
+  margin-bottom: 70px;/*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/
 }
 
 .principle-company {
@@ -185,7 +185,9 @@ width: 360px;
 }
 
 .partners {
-
+  width: 1160px;
+  height: 182px;
+margin-bottom: 80px;
 }
 
 .partners-list {
