--- a/css/style.css
+++ b/css/style.css
@@ -105,22 +105,32 @@ a {
   color: #a6a6a6;
 }
 
-/* .features-slide /*разметить блок со слайдами*/
-.services {
+.features {
   margin-bottom: 80px;
 }
+
+/* .features-slide /*разметить блок со слайдами*/
+
+.services {
+  margin-bottom: 80px;
+  }
 
 .service-list {
   display: flex;
   justify-content: space-between;
-  width: 1100px;
+  /* width: 1100px; */
   list-style: none;
   margin: 0;
   padding: 0;
+  padding-left: 20px;
 }
 
 .service-item {
   width: 300px;
+}
+
+.service-item:nth-child(3) {
+  margin-right: 60px;
 }
 
 .service-item-title {
@@ -322,6 +332,23 @@ a {
 .popup {
   display: none;
 }
+
+.social-connection {
+display: flex;
+}
+
+.footer-social {
+  width: 257px;
+  height: 80px;
+  background-color: #f5f5f5;
+  /*временно задал высоту для наглядности*/
+}
+
+.for-friends {
+  width: 563px;
+  margin-left: 140px;
+}
+
 
 .social-button {
   width: 79px;
