--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ a {
   display: flex;
   align-items: flex-start;
   line-height: 30px;
-  }
+}
 
 .main-header-logo {
   width: 165px;
@@ -108,10 +108,9 @@ a {
 }
 
 /* .features-slide /*разметить блок со слайдами*/
-
 .services {
   margin-bottom: 80px;
-  }
+}
 
 .service-list {
   display: flex;
@@ -328,12 +327,14 @@ a {
 }
 
 .social-connection {
-display: flex;
-padding-top: 70px;
-padding-bottom: 70px;
+  display: flex;
+  padding-top: 70px;
+  padding-bottom: 70px;
 }
 
 .footer-social {
+  display: flex;
+  justify-content: space-between;
   width: 257px;
   height: 80px;
   background-color: #f5f5f5;
@@ -344,7 +345,6 @@ padding-bottom: 70px;
   width: 563px;
   margin-left: 140px;
 }
-
 
 .social-button {
   width: 79px;
