--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ a {
   margin: 0 auto;
   padding: 0 20px;
 }
-
+/*---------------Навигация по сайту (меню) header-------------*/
 .main-navigation {
   display: flex;
   align-items: flex-start;
@@ -102,14 +102,14 @@ a {
 .order a:active {
   color: #a6a6a6;
 }
-
+/*бокс со СЛАЙДАМИ*/
 .features {
   width: 1180px;
   height: 544px;
   background-color: #888888;
   margin-bottom: 80px;
 }
-/*бокс со СЛАЙДАМИ*/
+/*------------------------Услуги компании------------------*/
 
 .services {
   margin-bottom: 80px;
@@ -149,12 +149,21 @@ a {
   text-transform: uppercase;
   color: #ffffff;
 }
-
+/*---------------------------Описание компании----------------*/
 .description-company {
   display: flex;
-  justify-content: space-between;
   margin-bottom: 70px;
-  /*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/
+  }
+
+.wrapper-about {
+heght: 700px;
+  height: 450px;
+
+}
+
+.our-progress {
+  width: 360px;
+  margin-left: auto;
 }
 
 .principle-company {
@@ -171,9 +180,7 @@ a {
   color: #283136;
 }
 
-.our-progress {
-  width: 360px;
-}
+
 
 .progress-slogan {
   margin-bottom: 45px;
@@ -203,7 +210,7 @@ a {
   line-height: 18px;
   color: #283136;
 }
-
+/*------------------------Партнеры компании--------------*/
 .partners {
   width: 1160px;
   height: 182px;
@@ -304,6 +311,7 @@ a {
 }
 
 /*здесь завершается разметка страницы каталога*/
+/*----------------footer сайта (Контакты)--------------*/
 .contact-name {
   font-size: 18px;
   font-weight: 700;
@@ -341,7 +349,7 @@ a {
   width: 257px;
   height: 80px;
   background-color: #f5f5f5;
-  /*временно задал высоту для наглядности*/
+
 }
 
 .for-friends {
