--- a/css/style.css
+++ b/css/style.css
@@ -11,13 +11,13 @@ body {
   padding: 0;
   font-family: "Roboto", Arial, sans-serif;
   color: #000000;
-  /* background-color: #ffffff; */
+  background-color: #ffffff;
   /*вернуть фон после макросетки*/
   font-size: 16px;
   line-height: 24px;
 }
 
-body>* {
+/* body>* {
   background: rgba(255, 0, 0, 0.5);
 }
 
@@ -27,7 +27,7 @@ body>*>* {
 
 body>*>*>* {
   background: rgba(44, 176, 21, 0.3);
-}
+} */
 
 a {
   text-decoration: none;
@@ -49,8 +49,9 @@ a {
 }
 
 .main-header,
-.features {
-  /* background-color: #eeeeee; */
+.features,
+.head-name {
+  background-color: #eeeeee;
 }
 
 /*вернуть фон после завершения разметки макросетки*/
@@ -63,6 +64,7 @@ a {
 .main-navigation {
   display: flex;
   align-items: flex-start;
+  width: 1160px;
   line-height: 30px;
 }
 
@@ -112,7 +114,7 @@ a {
 }
 /*бокс со СЛАЙДАМИ*/
 .features {
-  width: 1180px;
+  width: 1160px;
   height: 544px;
   background-color: #888888;
   margin-bottom: 80px;
@@ -257,7 +259,10 @@ heght: 700px;
   margin: 0;
   margin-bottom: 117px;
   padding: 0;
+  padding-top: 80px;
 }
+/*не понимаю, как растянуть серый фон как у
+main-navigation еще и на часть container*/
 /*--------фильтр-----------*/
 
 .catalog-cover-columns {
