исправил height на width у wrapper-about, удалил ширину у .principle-company и задал ее блоку обертке wrapper-about

--- a/css/style.css
+++ b/css/style.css
@@ -178,7 +178,7 @@ a {
 }
 
 .wrapper-about {
-  heght: 700px;
+  width: 660px;
   height: 450px;
 }
 
@@ -187,9 +187,9 @@ a {
   margin-left: auto;
 }
 
-.principle-company {
+/* .principle-company {
   width: 660px;
-}
+} */
 
 .principle-title {
   font-size: 45px;
