--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
-
-
 html {
   box-sizing: border-box;
 }
@@ -26,6 +24,7 @@ body>* {
 body>*>* {
   background: rgba(225, 235, 223, 0.3);
 }
+
 /*
 body>*>*>* {
   background: rgba(44, 176, 21, 0.3);
@@ -138,7 +137,7 @@ a {
   list-style: none;
   margin: 0;
   padding: 0;
-  }
+}
 
 .service-item {
   width: 300px;
@@ -187,10 +186,6 @@ a {
   margin-left: auto;
 }
 
-/* .principle-company {
-  width: 660px;
-} */
-
 .principle-title {
   font-size: 45px;
   font-weight: 500;
@@ -232,8 +227,7 @@ a {
 
 /*------------------------Партнеры компании--------------*/
 .partners {
-  width: 1160px;
-  height: 182px;
+  padding-bottom: 45px;
   margin-bottom: 80px;
 }
 
