--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,6 @@ a {
 /*---------------Навигация по сайту (меню) header-------------*/
 .main-navigation {
   display: flex;
-  align-items: flex-start;
   line-height: 30px;
 }
 
@@ -251,6 +250,12 @@ a {
 }
 
 /*отсюда начинается разметка страницы каталога*/
+.head-name {
+  padding: 0;
+  padding-top: 80px;
+}
+
+
 .page-title {
   font-size: 55px;
   font-weight: 500;
@@ -258,8 +263,7 @@ a {
   text-align: center;
   margin: 0;
   margin-bottom: 117px;
-  padding: 0;
-  padding-top: 80px;
+
 }
 
 /*не понимаю, как растянуть серый фон как у
@@ -412,10 +416,10 @@ main-navigation еще и на часть container*/
 
 .footer-social {
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   width: 257px;
-  height: 80px;
-  background-color: #f5f5f5;
+  /* height: 80px; */
+  /* background-color: #f5f5f5; */
 }
 
 .for-friends {
