--- a/css/style.css
+++ b/css/style.css
@@ -17,13 +17,13 @@ body {
   line-height: 24px;
 }
 
-body>* {
+/* body>* {
   background: rgba(255, 0, 0, 0.5);
 }
 
 body>*>* {
   background: rgba(225, 235, 223, 0.3);
-}
+} */
 
 /*
 body>*>*>* {
