добавил в правило main-navigation свойство flex-wrap: wrap на случай появления доп. пунктов в навигации

--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,7 @@ img {
 /*---------------Навигация по сайту (меню) header-------------*/
 .main-navigation {
   display: flex;
+  flex-wrap: wrap;
   line-height: 30px;
 }
 
