--- a/css/style.css
+++ b/css/style.css
@@ -11,13 +11,13 @@ body {
   padding: 0;
   font-family: "Roboto", Arial, sans-serif;
   color: #000000;
-  /* background-color: #ffffff; */
+  background-color: #ffffff;
   /*вернуть фон после макросетки*/
   font-size: 16px;
   line-height: 24px;
 }
 
-body>* {
+/* body>* {
   background: rgba(255, 0, 0, 0.5);
 }
 
@@ -27,7 +27,7 @@ body>*>* {
 
 body>*>*>* {
   background: rgba(44, 176, 21, 0.3);
-}
+} */
 
 a {
   text-decoration: none;
