--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,7 @@ img {
 display: flex;
 flex-wrap: wrap;
   width: 125px;/*было 116рх*/
-  /* margin-left: auto; */
+  /* было margin-left: auto; */
   margin-left: 105px;
   margin-top: 25px;
 }
@@ -123,7 +123,7 @@ flex-wrap: wrap;
     /* background-color: #ff0000; */
     left: -20px;
     top: 7px;
-    background-image: url("img/icons/cart-icon.svg");
+    background-image: url("img/icons/icon-cart.svg");
     background-repeat: no-repeat;
     background-position: 0 0;
   }
