Добавил внешние отступы у service-item-title (название услуг) и фоны для микросетки

--- a/css/style.css
+++ b/css/style.css
@@ -17,17 +17,26 @@ body {
   line-height: 24px;
 }
 
-body>* {
+/* body>* {
   background: rgba(255, 0, 0, 0.5);
 }
 
 body>*>* {
   background: rgba(225, 235, 223, 0.3);
-}
+} */
 
 body>*>*>* {
   background: rgba(44, 176, 21, 0.3);
 }
+
+body>*>*>*>*>* {
+  background: rgba(69, 150, 153, 0.3);
+}
+
+body>*>*>*>*>*>* {
+  background: rgba(150, 110, 110, 0.3);
+}
+
 
 a {
   text-decoration: none;
@@ -179,6 +188,8 @@ flex-wrap: wrap;
   font-weight: 700;
   line-height: 30px;
   text-transform: uppercase;
+  margin-bottom: 25px;
+  margin-top: 25px;
 }
 
 .service-item-slogan {
