задал класс для изображения в блоке our-progress и внеш. отступ снизу

--- a/css/style.css
+++ b/css/style.css
@@ -305,6 +305,10 @@ list-style: none;
 margin-bottom: 24px;
 }
 
+.picture-nerds {
+margin-bottom: 35px;
+}
+
 .progress-slogan {
   font-weight: 700;
   text-transform: uppercase;
